--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "dotenv": "^7.0.0",
     "eslint": "^5.15.3",
     "eslint-plugin-security": "^1.4.0",
-    "mocha": "^6.0.2",
-    "nyc": "^13.3.0"
+    "mocha": ">=6.1.3",
+    "nyc": "^14.0.0"
   }
 }
